--- a/frontend/packages/website/docs/Getting Started.mdx
+++ b/frontend/packages/website/docs/Getting Started.mdx
@@ -1,10 +1,15 @@
-
+---
+sidebar_position: 1
+---
 
 # Getting Started
 
 Welcome to the Haste Health documentation! This guide will help you get started with setting up and using Haste Health.
 
-## Running entire
+## Running Haste Health with Docker
+This will setup all the infrastructure required to run Haste Health and start the main server and worker.
+
+The server will be available at http://localhost:3000
 
 ```bash
 curl https://raw.githubusercontent.com/HasteHealth/HasteHealth/refs/heads/main/docker-compose.yml -o docker-compose.yml
