--- a/frontend/packages/website/docs/Getting Started/Intro.mdx
+++ b/frontend/packages/website/docs/Getting Started/Intro.mdx
@@ -2,7 +2,7 @@
 sidebar_position: 1
 ---
 
-# Getting Started
+# Intro
 
 Welcome to the Haste Health documentation! This guide will help you get started with setting up and using Haste Health.
 
