--- a/frontend/packages/website/docs/API/FHIR/Endpoints/InvokeInstance.mdx
+++ b/frontend/packages/website/docs/API/FHIR/Endpoints/InvokeInstance.mdx
@@ -1,4 +1,124 @@
 ---
 id: invoke-instance
-# title: POST /{ResourceType}/{id}/${code}
+title: invoke-instance
+sidebar_position: 12
 ---
+
+# Invoke Instance Operation
+
+The FHIR [instance-level operation invocation](https://www.hl7.org/fhir/operations.html) allows you to invoke a custom or standard operation on a specific resource instance. This is done using an HTTP POST or GET request to the operation endpoint for the resource instance.
+
+## Endpoint
+
+```
+POST /w/[tenant]/api/v1/[project]/fhir/r4/[ResourceType]/[id]/${code}
+GET /w/[tenant]/api/v1/[project]/fhir/r4/[ResourceType]/[id]/${code}?[parameters]
+```
+
+Where `[ResourceType]` is the type of resource (e.g., Patient, Observation), `[id]` is the logical ID of the resource instance, and `{code}` is the operation name (e.g., `$everything`, `$validate`).
+
+## Request Body (POST)
+
+For POST requests, the request body should contain a Parameters resource with the input parameters for the operation:
+
+```json
+{
+  "resourceType": "Parameters",
+  "parameter": [
+    {
+      "name": "start",
+      "valueDate": "2025-01-01"
+    },
+    {
+      "name": "end",
+      "valueDate": "2025-12-31"
+    }
+  ]
+}
+```
+
+## Response
+
+If the operation executes successfully, the server will respond with a `200 OK` status code and the operation result. The result may be a resource, a Parameters resource, or a Bundle depending on the operation.
+
+```
+HTTP/1.1 200 OK
+Content-Type: application/fhir+json
+```
+
+```json
+{
+  "resourceType": "Bundle",
+  "type": "searchset",
+  "entry": [
+    {
+      "fullUrl": "http://localhost:3000/w/[tenant]/api/v1/[project]/fhir/r4/Patient/12345",
+      "resource": {
+        "resourceType": "Patient",
+        "id": "12345",
+        "name": [
+          {
+            "use": "official",
+            "family": "Doe",
+            "given": ["John"]
+          }
+        ]
+      }
+    },
+    {
+      "fullUrl": "http://localhost:3000/w/[tenant]/api/v1/[project]/fhir/r4/Observation/67890",
+      "resource": {
+        "resourceType": "Observation",
+        "id": "67890",
+        "status": "final",
+        "subject": {
+          "reference": "Patient/12345"
+        }
+      }
+    }
+  ]
+}
+```
+
+## Error Handling
+
+If there are any issues with the request (e.g., invalid parameters, operation not supported), the server will respond with an appropriate error status code and include an `OperationOutcome` resource in the response body.
+
+```
+HTTP/1.1 400 Bad Request
+Content-Type: application/fhir+json
+```
+
+```json
+{
+  "resourceType": "OperationOutcome",
+  "issue": [
+    {
+      "severity": "error",
+      "code": "invalid",
+      "diagnostics": "Missing required parameter: start"
+    }
+  ]
+}
+```
+
+## Example using cURL
+
+Here is an example of how to invoke the `$everything` operation on a Patient resource using cURL:
+
+```bash
+curl -X POST "http://localhost:3000/w/[tenant]/api/v1/[project]/fhir/r4/Patient/12345/\$everything" \
+     -H "Content-Type: application/fhir+json" \
+     -H "Authorization: Bearer YOUR_ACCESS_TOKEN" \
+     -d '{
+           "resourceType": "Parameters",
+           "parameter": [
+             {
+               "name": "start",
+               "valueDate": "2025-01-01"
+             }
+           ]
+         }'
+```
+
+This command sends a POST request to invoke the `$everything` operation on Patient 12345, retrieving all related resources since January 1, 2025.
