--- a/frontend/packages/website/docs/API/FHIR/Endpoints/Read.mdx
+++ b/frontend/packages/website/docs/API/FHIR/Endpoints/Read.mdx
@@ -1,5 +1,76 @@
 ---
 id: read
-# title: GET /{ResourceType}/{id}
+title: read
 sidebar_position: 1
 ---
+
+# Read Resource
+
+The FHIR [read operation](https://www.hl7.org/fhir/http.html#read) allows you to retrieve a specific resource instance by its ID from the FHIR server. This is done using an HTTP GET request to the endpoint corresponding to the resource type and ID.
+
+## Endpoint
+
+```
+GET /w/[tenant]/api/v1/[project]/fhir/r4/[ResourceType]/[id]
+```
+
+Where `[ResourceType]` is the type of resource (e.g., Patient, Observation) and `[id]` is the logical ID of the resource instance.
+
+## Response
+
+If the resource is found, the server will respond with a `200 OK` status code and include the resource in the response body.
+
+```
+HTTP/1.1 200 OK
+Content-Type: application/fhir+json
+```
+
+```json
+{
+  "resourceType": "Patient",
+  "id": "12345",
+  "name": [
+    {
+      "use": "official",
+      "family": "Doe",
+      "given": ["John"]
+    }
+  ],
+  "gender": "male",
+  "birthDate": "1980-01-01"
+}
+```
+
+## Error Handling
+
+If the resource is not found, the server will respond with a `404 Not Found` status code and include an `OperationOutcome` resource in the response body.
+
+```
+HTTP/1.1 404 Not Found
+Content-Type: application/fhir+json
+```
+
+```json
+{
+  "resourceType": "OperationOutcome",
+  "issue": [
+    {
+      "severity": "error",
+      "code": "not-found",
+      "diagnostics": "Resource Patient/12345 not found"
+    }
+  ]
+}
+```
+
+## Example using cURL
+
+Here is an example of how to read a Patient resource using cURL:
+
+```bash
+curl -X GET "http://localhost:3000/w/[tenant]/api/v1/[project]/fhir/r4/Patient/12345" \
+     -H "Content-Type: application/fhir+json" \
+     -H "Authorization: Bearer YOUR_ACCESS_TOKEN"
+```
+
+This command sends a GET request to retrieve the Patient resource with ID 12345.
