update oidc document

--- a/frontend/packages/website/docs/API/FHIR/Endpoints/DeleteInstance.mdx
+++ b/frontend/packages/website/docs/API/FHIR/Endpoints/DeleteInstance.mdx
@@ -71,7 +71,7 @@ Content-Type: application/fhir+json
 Here is an example of how to delete a Patient resource using cURL:
 
 ```bash
-curl -X DELETE "http://localhost:3000/w/[tenant]/api/v1/[project]/fhir/r4/Patient/12345" \
+curl -X DELETE "http://api.haste.health/w/[tenant]/api/v1/[project]/fhir/r4/Patient/12345" \
      -H "Authorization: Bearer YOUR_ACCESS_TOKEN"
 ```
 
