--- a/frontend/packages/website/docs/API/FHIR/Endpoints/DeleteType.mdx
+++ b/frontend/packages/website/docs/API/FHIR/Endpoints/DeleteType.mdx
@@ -73,7 +73,7 @@ Content-Type: application/fhir+json
 Here is an example of how to conditionally delete Patient resources using cURL:
 
 ```bash
-curl -X DELETE "http://localhost:3000/w/[tenant]/api/v1/[project]/fhir/r4/Patient?identifier=http://example.org/fhir/ids|12345" \
+curl -X DELETE "http://api.haste.health/w/[tenant]/api/v1/[project]/fhir/r4/Patient?identifier=http://example.org/fhir/ids|12345" \
      -H "Authorization: Bearer YOUR_ACCESS_TOKEN"
 ```
 
