--- a/frontend/packages/website/docs/API/FHIR/Endpoints/Create.mdx
+++ b/frontend/packages/website/docs/API/FHIR/Endpoints/Create.mdx
@@ -76,7 +76,7 @@ Content-Type: application/fhir+json
 Here is an example of how to create a new Patient resource using cURL:  
 
 ```bash
-curl -X POST "http://localhost:3000/w/[tenant]/api/v1/[project]/fhir/r4/Patient" \
+curl -X POST "http://api.haste.health/w/[tenant]/api/v1/[project]/fhir/r4/Patient" \
      -H "Content-Type: application/fhir+json" \
      -H "Authorization: Bearer YOUR_ACCESS_TOKEN" \
      -d '{
