--- a/frontend/packages/website/docs/API/FHIR/Endpoints/HistorySystem.mdx
+++ b/frontend/packages/website/docs/API/FHIR/Endpoints/HistorySystem.mdx
@@ -43,7 +43,7 @@ Content-Type: application/fhir+json
   "total": 8,
   "entry": [
     {
-      "fullUrl": "http://localhost:3000/w/[tenant]/api/v1/[project]/fhir/r4/Patient/12345/_history/2",
+      "fullUrl": "http://api.haste.health/w/[tenant]/api/v1/[project]/fhir/r4/Patient/12345/_history/2",
       "resource": {
         "resourceType": "Patient",
         "id": "12345",
@@ -68,7 +68,7 @@ Content-Type: application/fhir+json
       }
     },
     {
-      "fullUrl": "http://localhost:3000/w/[tenant]/api/v1/[project]/fhir/r4/Observation/67890/_history/1",
+      "fullUrl": "http://api.haste.health/w/[tenant]/api/v1/[project]/fhir/r4/Observation/67890/_history/1",
       "resource": {
         "resourceType": "Observation",
         "id": "67890",
@@ -120,7 +120,7 @@ Content-Type: application/fhir+json
 Here is an example of how to retrieve the system-wide history using cURL:
 
 ```bash
-curl -X GET "http://localhost:3000/w/[tenant]/api/v1/[project]/fhir/r4/_history?_count=50&_since=2025-01-01" \
+curl -X GET "http://api.haste.health/w/[tenant]/api/v1/[project]/fhir/r4/_history?_count=50&_since=2025-01-01" \
      -H "Content-Type: application/fhir+json" \
      -H "Authorization: Bearer YOUR_ACCESS_TOKEN"
 ```
