--- a/frontend/packages/website/docs/API/FHIR/Endpoints/HistoryType.mdx
+++ b/frontend/packages/website/docs/API/FHIR/Endpoints/HistoryType.mdx
@@ -42,7 +42,7 @@ Content-Type: application/fhir+json
   "total": 5,
   "entry": [
     {
-      "fullUrl": "http://localhost:3000/w/[tenant]/api/v1/[project]/fhir/r4/Patient/12345/_history/2",
+      "fullUrl": "http://api.haste.health/w/[tenant]/api/v1/[project]/fhir/r4/Patient/12345/_history/2",
       "resource": {
         "resourceType": "Patient",
         "id": "12345",
@@ -67,7 +67,7 @@ Content-Type: application/fhir+json
       }
     },
     {
-      "fullUrl": "http://localhost:3000/w/[tenant]/api/v1/[project]/fhir/r4/Patient/67890/_history/1",
+      "fullUrl": "http://api.haste.health/w/[tenant]/api/v1/[project]/fhir/r4/Patient/67890/_history/1",
       "resource": {
         "resourceType": "Patient",
         "id": "67890",
@@ -122,7 +122,7 @@ Content-Type: application/fhir+json
 Here is an example of how to retrieve the history of all Patient resources using cURL:
 
 ```bash
-curl -X GET "http://localhost:3000/w/[tenant]/api/v1/[project]/fhir/r4/Patient/_history?_count=20&_since=2025-01-01" \
+curl -X GET "http://api.haste.health/w/[tenant]/api/v1/[project]/fhir/r4/Patient/_history?_count=20&_since=2025-01-01" \
      -H "Content-Type: application/fhir+json" \
      -H "Authorization: Bearer YOUR_ACCESS_TOKEN"
 ```
