--- a/frontend/packages/website/docs/API/FHIR/Endpoints/Read.mdx
+++ b/frontend/packages/website/docs/API/FHIR/Endpoints/Read.mdx
@@ -68,7 +68,7 @@ Content-Type: application/fhir+json
 Here is an example of how to read a Patient resource using cURL:
 
 ```bash
-curl -X GET "http://localhost:3000/w/[tenant]/api/v1/[project]/fhir/r4/Patient/12345" \
+curl -X GET "http://api.haste.health/w/[tenant]/api/v1/[project]/fhir/r4/Patient/12345" \
      -H "Content-Type: application/fhir+json" \
      -H "Authorization: Bearer YOUR_ACCESS_TOKEN"
 ```
