--- a/frontend/packages/website/docs/API/FHIR/Endpoints/SearchSystem.mdx
+++ b/frontend/packages/website/docs/API/FHIR/Endpoints/SearchSystem.mdx
@@ -46,7 +46,7 @@ Content-Type: application/fhir+json
   "total": 3,
   "entry": [
     {
-      "fullUrl": "http://localhost:3000/w/[tenant]/api/v1/[project]/fhir/r4/Patient/12345",
+      "fullUrl": "http://api.haste.health/w/[tenant]/api/v1/[project]/fhir/r4/Patient/12345",
       "resource": {
         "resourceType": "Patient",
         "id": "12345",
@@ -60,7 +60,7 @@ Content-Type: application/fhir+json
       }
     },
     {
-      "fullUrl": "http://localhost:3000/w/[tenant]/api/v1/[project]/fhir/r4/Observation/67890",
+      "fullUrl": "http://api.haste.health/w/[tenant]/api/v1/[project]/fhir/r4/Observation/67890",
       "resource": {
         "resourceType": "Observation",
         "id": "67890",
@@ -101,7 +101,7 @@ Content-Type: application/fhir+json
 Here is an example of how to perform a system-level search using cURL:
 
 ```bash
-curl -X GET "http://localhost:3000/w/[tenant]/api/v1/[project]/fhir/r4?_type=Patient,Observation&_lastUpdated=ge2025-01-01" \
+curl -X GET "http://api.haste.health/w/[tenant]/api/v1/[project]/fhir/r4?_type=Patient,Observation&_lastUpdated=ge2025-01-01" \
      -H "Content-Type: application/fhir+json" \
      -H "Authorization: Bearer YOUR_ACCESS_TOKEN"
 ```
