--- a/frontend/packages/website/docs/API/FHIR/Endpoints/Update.mdx
+++ b/frontend/packages/website/docs/API/FHIR/Endpoints/Update.mdx
@@ -104,7 +104,7 @@ Content-Type: application/fhir+json
 Here is an example of how to update a Patient resource using cURL:
 
 ```bash
-curl -X PUT "http://localhost:3000/w/[tenant]/api/v1/[project]/fhir/r4/Patient/12345" \
+curl -X PUT "http://api.haste.health/w/[tenant]/api/v1/[project]/fhir/r4/Patient/12345" \
      -H "Content-Type: application/fhir+json" \
      -H "Authorization: Bearer YOUR_ACCESS_TOKEN" \
      -d '{
