--- a/frontend/packages/website/docs/API/FHIR/Endpoints/VersionRead.mdx
+++ b/frontend/packages/website/docs/API/FHIR/Endpoints/VersionRead.mdx
@@ -72,7 +72,7 @@ Content-Type: application/fhir+json
 Here is an example of how to read a specific version of a Patient resource using cURL:
 
 ```bash
-curl -X GET "http://localhost:3000/w/[tenant]/api/v1/[project]/fhir/r4/Patient/12345/_history/1" \
+curl -X GET "http://api.haste.health/w/[tenant]/api/v1/[project]/fhir/r4/Patient/12345/_history/1" \
      -H "Content-Type: application/fhir+json" \
      -H "Authorization: Bearer YOUR_ACCESS_TOKEN"
 ```
