--- a/frontend/packages/website/docs/Getting Started/Intro.mdx
+++ b/frontend/packages/website/docs/Getting Started/Intro.mdx
@@ -18,7 +18,7 @@ Before you begin, ensure you have the following installed on your machine:
 ## Running Haste Health with Docker
 This will setup all the infrastructure required to run Haste Health and start the main server and worker.
 
-The server will be available at http://localhost:3000
+The server will be available at http://api.haste.health
 
 ```bash
 curl https://raw.githubusercontent.com/HasteHealth/HasteHealth/refs/heads/main/docker-compose.yml -o docker-compose.yml
