--- a/frontend/packages/website/docs/Authentication/OpenID Connect/Authorization Code.mdx
+++ b/frontend/packages/website/docs/Authentication/OpenID Connect/Authorization Code.mdx
@@ -10,9 +10,9 @@ tags:
 
 # Authorization Code Grant
 
-For Authorization code grant flow we require PKCE. 
+For the authorization code grant flow we require PKCE (Proof Key for Code Exchange). 
 
-## Overview with of Authorization code grant with PKCE
+## Overview with of Authorization code grant with PKCE (Proof Key for Code Exchange)
 
 A highly secure flow in the OAuth 2.0 framework. It enhances the standard Authorization Code flow, primarily to protect public clients (like mobile and single-page applications) that cannot securely store a client_secret
 
